@@ -8,7 +8,7 @@ use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev$ =~ /\d+/gmx );
 
 use Moose;
 
-with qw(File::DataClass::Util);
+extends qw(File::DataClass);
 
 has 'name'       => is => 'rw', isa => 'Str',    required => 1;
 has '_resultset' => is => 'ro', isa => 'Object', required => 1;
